offer c:geo for navigation intents (fix #8925)

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -205,6 +205,11 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cgeo.geocaching.MainActivity" />
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <data android:scheme="geo" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity
             android:name="cgeo.geocaching.address.AddressListActivity"
