--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,10 @@ plugins {
     id 'idea'
 
     // check for updates of gradle plugin dependencies
-    id 'com.github.ben-manes.versions' version '0.28.0'
+    id 'com.github.ben-manes.versions' version '0.31.0'
 
     // use SpotBugs instead of FindBugs, see https://plugins.gradle.org/plugin/com.github.spotbugs
-    id 'com.github.spotbugs' version '4.3.0'
+    id 'com.github.spotbugs' version '4.5.0'
 }
 
 /*
@@ -157,4 +157,5 @@ tasks.named('dependencyUpdates') {
     checkForGradleUpdate = true
     revision = "release"
     gradleReleaseChannel = "current"
+    outputFormatter = "plain, html"
 }
