edit maps.me lint config
- add lintOptions like in the other plugins
- delete 2 no more valid parameters

Info:
You can made local lint check by
(global or for sub project)
  gradlew -q check
  gradlew -q :cmapswithme-api:check

--- a/mapswithme-api/build.gradle
+++ b/mapswithme-api/build.gradle
@@ -15,4 +15,12 @@ android {
     java.srcDirs = ['src']
     res.srcDirs = ['res']
   }
+
+  lintOptions {
+    // generally we accept lint errors when building
+    abortOnError false
+
+    // abort release builds in case of FATAL errors
+    checkReleaseBuilds true
+  }
 }
