--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -209,6 +209,7 @@
                 <action android:name="android.intent.action.VIEW" />
                 <data android:scheme="geo" />
                 <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
         <activity
