--- a/cgeo-contacts/AndroidManifest.xml
+++ b/cgeo-contacts/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cgeo.contacts"
-    android:versionCode="7"
-    android:versionName="1.7" >
+    android:versionCode="202010113"
+    android:versionName="2020.10.13" >
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
