--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -95,12 +95,9 @@
             android:value="3.0" />
 
         <activity
-            android:name=".MainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:exported="true"
+            android:name=".SplashActivity"
             android:label="@string/app_name"
-            android:theme="@style/cgeo_main"
-            android:windowSoftInputMode="stateAlwaysHidden" >
+            android:theme="@style/SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -112,6 +109,14 @@
             </intent-filter>
 
             <meta-data android:name="android.app.shortcuts" android:resource="@xml/shortcuts" />
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/cgeo_main"
+            android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
         <activity
             android:name=".SearchActivity"
