--- a/main/build.gradle
+++ b/main/build.gradle
@@ -342,6 +342,9 @@ dependencies {
     // Support Library AppCompat
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
+    // Support Library core (used for eg. HtmlCompat)
+    implementation 'androidx.core:core:1.3.2'
+
     // Support Library ExifInterface
     implementation 'androidx.exifinterface:exifinterface:1.3.1'
 
