--- a/main/build.gradle
+++ b/main/build.gradle
@@ -49,9 +49,10 @@ android {
         // this is necessary to move .google_measurement_service into a app-specific namespace (see https://github.com/kotmyrevich/analytics-issues/issues/784)
         applicationId = "cgeo.geocaching"
 
-        // include only those language resources from libraries which we actively maintain ourselves in the translation project
-        // not yet enough translations (~50%): "is","iw" (="he"),"zh"
-        resConfigs "en","ar","ca","ceb","cs","da","de","el","es","fi","fil","fr","hu","in","it","ja","ko","lt","lv","nb","nl","pl","pt","ro","ru","sk","sl","sv","tl","tr"
+        // include only those language resources from libraries which we actively maintain ourselves in the translation project at https://crowdin.com/project/cgeo
+        // not yet enough translations (~50%): "is","iw"(="he"),"lb","uk","zh","zh-rTW"
+        // activated for testing: "uk"
+        resConfigs "en","ar","ca","ceb","cs","da","de","el","es","fi","fil","fr","hu","in","it","ja","ko","lt","lv","nb","nl","pl","pt","ro","ru","sk","sl","sv","tl","tr","uk"
     }
 
     // signing is handled via private.properties
