--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -115,7 +115,7 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/cgeo_main"
+            android:theme="@style/cgeo_main.transparent"
             android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
         <activity
