--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         android:hardwareAccelerated="false"
         android:usesCleartextTraffic="true"
         android:supportsRtl="true"
-        android:largeHeap="true">
+        android:largeHeap="true"
+        android:requestLegacyExternalStorage="true"> <!-- TODO SAF: leave 'android:requestLegacyExternalStorage="true"' until done, remove completely when done -->
 
         <!-- Samsung Multi-Window support -->
         <uses-library
