--- a/main/build.gradle
+++ b/main/build.gradle
@@ -19,7 +19,7 @@ if (isContinuousIntegrationServer()) {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 29 // TODO SAF: leave at 29 until done, change to 30 when done
 
     compileOptions {
         // use the diamond operator and some other goodies in Android
@@ -30,7 +30,7 @@ android {
     defaultConfig {
         minSdkVersion 21
         //noinspection OldTargetApi
-        targetSdkVersion 30
+        targetSdkVersion 29 // TODO SAF: leave at 29 until done, change to 30 when done
         versionName versionNameFromDate()
         versionCode versionCodeFromDate(0)
 
