--- a/main/build.gradle
+++ b/main/build.gradle
@@ -399,6 +399,9 @@ dependencies {
     // Support Library RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
+    // Settings Library
+    implementation 'androidx.preference:preference:1.1.1'
+
     // Support Annotations. use same version for the main app and the test app
     def annotationVersion = '1.3.0'
     implementation "androidx.annotation:annotation:$annotationVersion"
