add generic browser query to manifest (fix #12209)

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -911,6 +911,11 @@
         <package android:name="menion.android.whereyougo" />
         <package android:name="net.osmand" />
         <package android:name="net.osmand.plus" />
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="https" />
+        </intent>
     </queries>
 
 </manifest>
